vlib/v/checker/tests/return_type.vv
fn test() bool {
	return 100
}

fn main() {}
